--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/src/style.css">
-  <title>World Clock</title>
-</head>
-<body>
-  <h1>World Clock</h1>
-  <footer>This project was created by Aprille Guevarra and is open source on GitHub</footer>
-  <script src="/src/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
+    <title>World Clock</title>
+  </head>
+  <body>
+    <h1>World Clock</h1>
+    <footer>
+      This project was created by
+      <a
+        href="https://aprille-g.netlify.app/#"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Aprille Guevarra</a
+      >
+      and is
+      <a href="https://github.com/aprilleg/World-clock" target="_blank"
+        >open source on GitHub.</a
+      >
+    </footer>
+    <script src="/src/index.js"></script>
+  </body>
 </html>
