created the world clock structure and added css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="/" id="countries">
+        <option value="/">Select--</option>
+        <option value="">Philippines</option>
+        <option value="">Australia</option>
+        <option value="">Tokyo</option>
+        <option value="">Maldives</option>
+        <option value="">Hawaii</option>
+      </select>
+      <div class="country">
+        <div>
+          <h2>Philippines</h2>
+          <div class="date">November 4, 2025</div>
+        </div>
+        <div class="time">6:04:30 <small>PM</small></div>
+      </div>
+      <div class="country">
+        <div>
+          <h2>Philippines</h2>
+          <div class="date">November 4, 2025</div>
+        </div>
+        <div class="time">6:04:30 <small>PM</small></div>
+      </div>
+    </div>
+
     <footer>
       This project was created by
       <a
