--- a/index.html
+++ b/index.html
@@ -13,25 +13,29 @@
       <h1>World Clock</h1>
       <select name="/" id="countries">
         <option value="/">Select--</option>
-        <option value="">Philippines</option>
-        <option value="">Australia</option>
-        <option value="">Tokyo</option>
-        <option value="">Maldives</option>
-        <option value="">Hawaii</option>
+        <option value="Asia/Manila">Philippines</option>
+        <option value="Australia/Brisbane">Australia</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Indian/Maldives">Maldives</option>
+        <option value="Pacific/Honolulu">Hawaii</option>
       </select>
       <div class="country">
-        <div>
-          <h2>Philippines</h2>
-          <div class="date">November 4, 2025</div>
+        <div id="philippines">
+          <div>
+            <h2>Philippines</h2>
+            <div class="date"></div>
+          </div>
         </div>
-        <div class="time">6:04:30 <small>PM</small></div>
+        <div class="time"></div>
       </div>
       <div class="country">
-        <div>
-          <h2>Philippines</h2>
-          <div class="date">November 4, 2025</div>
+        <div id="tokyo">
+          <div>
+            <h2>Tokyo</h2>
+            <div class="date"></div>
+          </div>
         </div>
-        <div class="time">6:04:30 <small>PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
 
