--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 
       <select id="countries">
         <option value="/">Select--</option>
+        <option value="current">My Location</option>
         <option value="Europe/Paris">Paris</option>
         <option value="Australia/Brisbane">Australia</option>
         <option value="US/Alaska">Alaska</option>
         <option value="Indian/Maldives">Maldives</option>
         <option value="Pacific/Honolulu">Hawaii</option>
       </select>
-      
+
       <div id="default-cities">
         <div class="country">
           <div class="city" id="philippines">
